# Capstone-C-Compiler

./: CMakeLists.txt  FlexCode.l  README.md  SyntaxTree.cpp  SyntaxTree.h  TestText.txt  TokenNames.tab.c  TokenNames.tab.h  TokenNames.y  YaccCode.tab.cpp  YaccCode.tab.hpp  YaccCode.ypp  driver.cpp  driver.h  lex.yy.c  lex.yy.cc  main.cpp
Test Programs/1) Lexical Errors/: Bad int data type.c  Identifier after numeric constant.c  Invalid @ operator.c  Invalid function name.c  Pound symbol instead of (.c
Test Programs/2) Syntax Errors/: No Parens with if.c
Test Programs/3) Semantic Errors/: Float as Array Index.c
Test Programs/4) Correct Programs/: Power Function.c
Test Programs/a) Regex Tests/: Literal Tests.txt
